--- a/css/estilo.css
+++ b/css/estilo.css
@@ -80,15 +80,24 @@ h1 {
 
 .galeria {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-  height: 600px;
+  height: 500px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  background-color: rgb(251, 185, 141);
+}
+.galeria .imgGaleria {
+  border-radius: 20%;
+  transition: 1s;
+}
+.galeria .imgGaleria:hover {
+  transform: scale(1.2);
+  transition: 1s;
 }
 
 .sobreMi {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-  background-color: rgb(251, 185, 141);
+  background-color: rgb(255, 255, 255);
   height: 400px;
   display: flex;
   justify-content: center;
@@ -96,7 +105,7 @@ h1 {
   text-align: center;
   flex-direction: column;
 }
-.sobreMi p {
+.sobreMi h2 {
   padding: 50px 0 px 50px 0px;
 }
 
@@ -178,6 +187,14 @@ h1 {
   transition: 487ms;
   background-color: #ffffff;
   color: #f4a261;
+}
+
+.contacMensaje {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: start;
 }
 
 /*# sourceMappingURL=estilo.css.map */
