--- a/estilo.scss
+++ b/estilo.scss
@@ -5,6 +5,8 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+
+
 .navbar {
     width: 100%;
     position: fixed;
@@ -91,15 +93,24 @@ h1 {
 
 .galeria {
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-    height: 600px;
+    height: 500px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-color: rgb(251, 185, 141);
+    .imgGaleria{
+        border-radius: 20%;
+        transition: 1.0s;
+    }
+    .imgGaleria:hover{
+        transform: scale(1.2);
+        transition: 1.0s;
+    }
 }
 
 .sobreMi {
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-    background-color: rgb(251, 185, 141);
+    background-color: rgb(255, 255, 255);
     height: 400px;
     display: flex;
     justify-content: center;
@@ -107,7 +118,7 @@ h1 {
     text-align: center;
     flex-direction: column;
 
-    p {
+    h2 {
         padding: 50px 0 px 50px 0px;
     }
 }
@@ -210,4 +221,12 @@ h1 {
     background-color: #ffffff;
     color: #f4a261;
 
+}
+
+.contacMensaje{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: start;
 }
